# yacw

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  annotated.html  annotated_dup.js  classes.html  classyacw_1_1string-members.html  classyacw_1_1string.html  classyacw_1_1string.js  curses_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  navtreedata.js  navtreeindex0.js  string_8hpp_source.html  yacw_8hpp_source.html
.github/workflows/: Doxygen.yml  MacLinuxWindows.yml
include/: string.hpp  yacw.hpp
search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_1.js  searchdata.js
src/: string.cpp  yacw.cpp
tests/: CMakeLists.txt  yacw_stringtest.cpp  yacwtest.cpp
